improved picture viewer to render SVG into raster